Fixed inconsistent javadoc parameter names