@@ -233,8 +233,8 @@ public class EstimateStainVectors {
 		final Integer[] indexes = new Integer[n];
 		final Double[] data = new Double[n];
 		for (int i=0; i<n; i++) {
-			indexes[i] = new Integer(i);
-			data[i] = new Double(values[i]);
+			indexes[i] = Integer.valueOf(i);
+			data[i] = Double.valueOf(values[i]);
 		}
 		Arrays.sort(indexes, new Comparator<Integer>() {
 			@Override
