@@ -362,7 +362,7 @@ public class TMADearrayer {
 		Collections.sort(pointRow, new Comparator<Point>() {
 			@Override
 			public int compare(Point p1, Point p2) {
-				return new Integer(p1.x).compareTo(p2.x);
+				return Integer.valueOf(p1.x).compareTo(p2.x);
 			}
 		});
 			
@@ -397,7 +397,7 @@ public class TMADearrayer {
 		Collections.sort(points, new Comparator<Point>() {
 			@Override
 			public int compare(Point p1, Point p2) {
-				return new Integer(p1.y).compareTo(p2.y);
+				return Integer.valueOf(p1.y).compareTo(p2.y);
 			}
 		});
 		
